# pytest

testing/: README.md  config_file.ini  conftest.py  pytest.ini  requirements.txt  setup.cfg
testing/backend/configs/: configs.yaml  logging.py  package.py  user-config.yaml
testing/doc/: Getting-Started.md  checklist.todo  notes.txt  test-case.todo
testing/frontend/: main.py  test.py
testing/frontend/Review/: E0001-events.py  E0002-stream-events.py  test_API-Network_Put_cellular_configuration_TC0012.py  test_API_LTE_Network_Delete_Network_TC0008.py  test_API_LTE_Network_Get_Describe_network_TC0009.py  test_API_LTE_Network_Get_EPC_configuration_TC0013.py  test_API_LTE_Network_Get_Federation_Gateway_TC0015.py  test_API_LTE_Network_Get_cellular_configuration_TC0011.py  test_API_LTE_Network_Post_Network_TC0007.py  test_API_LTE_Network_Put_EPC_Configuration_TC0014.py  test_API_LTE_Network_Put_Entire_Network_TC0010.py
testing/frontend/test/: test_API_M1_LTE_APN_TC0001_Get_APN.py  test_API_M1_LTE_APN_TC0002_Post_APN.py  test_API_M1_LTE_APN_TC0003_Get_Specific_APN.py  (+28 more)
testing/swagger_utilities/: apn_utils.py  gateway_utils.py  network_utils.py  policy_utils.py  subscriber_utils.py  swagger_utils.py  tier_utils.py
testing/test_data/: add_apn.json  add_gateway.json  add_network.json  add_network2.json  add_policy.json  add_subscriber.json  create_tier.json  test_data.py  update_apn.json  update_network.json
testing/tests/: test_swagger_api.py  test_swagger_api.py_bkp  test_swagger_apn.py  test_swagger_gateway.py  test_swagger_network.py  test_swagger_subscriber.py
(+45 files in other folders)
