[test]
# py.test options when running `python setup.py test`
addopts = --verbose
extras = True

[aliases]
test=pytest

[options.extras_require]
# Add here additional requirements for extra features:

# Add here test dependencies (used by pytest-runner)
testing =
    flake8  # required for system tests

[flake8]
exclude =
    .cfg
    .eggs
    docs/conf.py
